# vh-process

./: Dockerfile  docker-compose.yml  pyproject.toml  urls.py
settings/: __init__.py  settings.py
videoprocessing/: apps.py  celery.py  tasks.py
videoprocessing/api/: urls.py
videoprocessing/api/video/: urls.py  views.py
wsgi/: asgi.py  wsgi.py
